# google-cloud-profile-vault

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  auth.rs  chrome.rs  cli.rs  config.rs  credentials.rs  diagnostics.rs  keychain.rs  main.rs  process.rs  secret.rs
